# fs

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  vix.json
examples/: exists_and_size.cpp  list_dir.cpp  read_text.cpp  write_text.cpp
include/rix/fs/: dir.hpp  file.hpp  fs.hpp  ops.hpp  path.hpp  util.hpp
tests/: test_basic.cpp
